tests/paczka1/small_fuzzy/65805457.err
Error in line 3: Eh5k77 S100 11,0
Error in line 14: Eh5k77 A925 55,8
